development/local/dependencies/medusa.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: medusa
    app.kubernetes.io/name: medusa
  name: medusa
spec:
  selector:
    app.kubernetes.io/instance: medusa
    app.kubernetes.io/name: medusa
  sessionAffinity: None
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: medusa
    app.kubernetes.io/name: medusa
  name: medusa
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: medusa
      app.kubernetes.io/name: medusa
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: medusa
        app.kubernetes.io/name: medusa
    spec:
      containers:
        - image: alpine:3.16.0
          imagePullPolicy: IfNotPresent
          name: medusa
          command:
            - tail
            - -f
            - /dev/null
          ports:
            - containerPort: 8000
